Changed naming scheme of basic shared structures.

--- a/Scenery/Makefile
+++ b/Scenery/Makefile
@@ -26,7 +26,8 @@
 
 TARGET = libScenery.a
 
-CFILES = chunkmgr.c common.c mesh.c scenery.c scanner.c parser.c geometry.c
+CFILES = chunkmgr.c common.c mesh.c scenery.c scanner.c parser.c geometry.c \
+	stars.c
 OFILES = $(CFILES:.c=.o)
 
 
@@ -94,6 +95,9 @@ geometry.o:
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.19  1997/08/27 03:30:23  curt
+# Changed naming scheme of basic shared structures.
+#
 # Revision 1.18  1997/08/02 19:10:12  curt
 # Incorporated mesh2GL.c into mesh.c
 #
