--- a/Scenery/Makefile
+++ b/Scenery/Makefile
@@ -27,7 +27,7 @@
 TARGET = libScenery.a
 
 CFILES = astro.c common.c geometry.c mesh.c moon.c obj.c orbits.c planets.c \
-	scenery.c stars.c sun.c
+	scenery.c sky.c stars.c sun.c
 
 OFILES = $(CFILES:.c=.o)
 
@@ -99,6 +99,9 @@ geometry.o:
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.25  1997/12/17 23:13:45  curt
+# Began working on rendering the sky.
+#
 # Revision 1.24  1997/11/25 19:25:33  curt
 # Changes to integrate Durk's moon/sun code updates + clean up.
 #
