--- a/Scenery/Makefile
+++ b/Scenery/Makefile
@@ -23,10 +23,12 @@
 # (Log is kept at end of this file)
 #---------------------------------------------------------------------------
 
+
 ARLIBRARY = libScenery.a
 TARGETS = $(ARLIBRARY)
 
-CFILES = common.c geometry.c mesh.c obj.c scenery.c tilemgr.c tileutils.c
+CFILES = common.c geometry.c mesh.c obj.c scenery.c texload.c \
+	tilemgr.c tileutils.c
 CXXFILES = 
 
 LDIRT = $(FG_ROOT_LIB)/$(ARLIBRARY)
